--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+            content="Trésor USTHB - A big library for USTHB ressources.
+A digital library of all the courses, Exercises, Exams and several other documents that are teached in the University of Science and Technology Houari Boumediene USTHB"
     />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" />
     <link
